codex-rs/tui/src/app/snapshots/codex_tui__app__tests__rewind_tests__first_rewind_history.snap
---
source: tui/src/app/rewind_tests.rs
expression: "history[notice_index]"
---
• You’re continuing from this point in a new conversation
