codex-rs/tui/src/app/snapshots/codex_tui__app__tests__rewind_tests__rewind_retained_history.snap
---
source: tui/src/app/rewind_tests.rs
expression: "history[retained_index..=notice_index].join(\"\\n\")"
---

› retained prompt

• You’re continuing from this point in a new conversation
